fix(identity): keep diagnostic fallback compatible with Android 8